--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 <!-- Icon Bar (Sidebar - hidden on small screens) -->
 <nav class="w3-sidebar w3-bar-block w3-small w3-hide-small w3-center">
   <!-- Avatar image in top left corner -->
-  <img src="/Users/benszabo/Documents/Personal Projects/Personal Site/benszabo.github.io/Photos/facePhoto.jpg" style="width:100%">
+  <img src="Photos/facePhoto.jpg" style="width:100%">
   <a href="#" class="w3-bar-item w3-button w3-padding-large w3-black">
     <i class="fa fa-home w3-xxlarge"></i>
     <p>HOME</p>
@@ -52,7 +52,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
   <header class="w3-container w3-padding-32 w3-center w3-black" id="home">
     <h1 class="w3-jumbo"><span class="w3-hide-small">I'm</span> Benjamin Szabo.</h1>
     <p>UPS CO-OP and Software Quality Assurance Engineer.</p>
-    <img src="/Users/benszabo/Documents/Personal Projects/Personal Site/benszabo.github.io/Photos/facePhoto.jpg" alt="boy" class="w3-image" width="392" height="508">
+    <img src="/Photos/facePhoto.jpg" alt="boy" class="w3-image" width="392" height="508">
   </header>
 
   <!-- About Section -->
