--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 
   <!-- About Section -->
   <div class="w3-content w3-justify w3-text-grey w3-padding-64" id="about">
-    <h2 class="w3-text-light-grey">My Name</h2>
+    <h2 class="w3-text-light-grey">About Me</h2>
     <hr style="width:200px" class="w3-opacity">
     <p>Current student at Indiana University Southeast and Software Quality Assurance Engineer co-op at UPS. I am constantly striving to improve my skills in the world of technology. I'm involved in the development of automated tests using Selenium WebDriver written in java. 
       Jenkins used to run these scheduled tests on remote machines. Heavy API integration testing with Citrus and SprintBoot using WebLogic and ActiveMQ configurations. Multiple message queues and API endpoints thoroughly tested.
