--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
       </div>
     </div>
 
-    <form method="get" action="/resume/Benjamin's_Resume.pdf">
+    <form method="get" action="/Users/benszabo/Documents/Personal Projects/Personal Site/benszabo.github.io/resume/Benjamin's_Resume.pdf">
       <button class="w3-button w3-light-grey w3-padding-large w3-section">
         <i class="fa fa-download"></i> Download Resume
       </button>
@@ -113,7 +113,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     </div><br>
     <p>Let's get in touch. Send me a message:</p>
 
-    <form method="post" action="mailto:bcszabo@iu.edu" target="_blank">
+    <form action="mailto:bcszabo@iu.edu" target="_blank">
       <p><input class="w3-input w3-padding-16" type="text" placeholder="Name" required name="Name"></p>
       <p><input class="w3-input w3-padding-16" type="text" placeholder="Email" required name="Email"></p>
       <p><input class="w3-input w3-padding-16" type="text" placeholder="Subject" required name="Subject"></p>
