--- a/index.html
+++ b/index.html
@@ -58,8 +58,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
   <div class="w3-content w3-justify w3-text-grey w3-padding-64" id="about">
     <h2 class="w3-text-light-grey">About Me</h2>
     <hr style="width:200px" class="w3-opacity">
-    <p>Current student at Indiana University Southeast and Software Quality Assurance Engineer Co-op at UPS. I am constantly striving to improve my skills in the world of technology. I'm involved in the development of automated tests using Selenium WebDriver written in java. 
-      Jenkins used to run these scheduled tests on remote machines. Heavy API integration testing with Citrus and Spring Boot using WebLogic and ActiveMQ configurations. Multiple message queues and APIs thoroughly tested.
+    <p>Current student at Indiana University Southeast and Application Developer Co-op at UPS. I am constantly striving to improve my skills in the world of technology. I currently provide constant development for a middleware application that uses spring boot and fuse that resolves communication differences between many other applications, requiring a wide understanding of business logic. Previously involved in the development of automated tests using Selenium WebDriver written in java. Jenkins used to run these scheduled tests on remote machines. Heavy API integration testing with Citrus and Spring Boot using WebLogic and ActiveMQ configurations.
     </p>
     <h3 class="w3-padding-16 w3-text-light-grey">My Skills</h3>
     <p class="w3-wide">Software Quality Assurance</p>
