--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
   <!-- Header/Home -->
   <header class="w3-container w3-padding-32 w3-center w3-black" id="home">
     <h1 class="w3-jumbo"><span class="w3-hide-small">I'm</span> Benjamin Szabo.</h1>
-    <p>UPS CO-OP and Software Quality Assurance Engineer</p>
+    <p>UPS CO-OP and Application Developer</p>
     <img src="/Photos/facePhoto.jpg" alt="boy" class="w3-image" width="392" height="508">
   </header>
 
