--- a/index.html
+++ b/index.html
@@ -61,6 +61,10 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     <p>Current student at Indiana University Southeast and Application Developer Co-op at UPS. I am constantly striving to improve my skills in the world of technology. I currently provide constant development for a middleware application that uses spring boot and fuse that resolves communication differences between many other applications, requiring a wide understanding of business logic. Previously involved in the development of automated tests using Selenium WebDriver written in java. Jenkins used to run these scheduled tests on remote machines. Heavy API integration testing with Citrus and Spring Boot using WebLogic and ActiveMQ configurations.
     </p>
     <h3 class="w3-padding-16 w3-text-light-grey">My Skills</h3>
+      <p class="w3-wide">Application Development</p>
+    <div class="w3-white">
+      <div class="w3-dark-grey" style="height:28px;width:90%"></div>
+    </div>
     <p class="w3-wide">Software Quality Assurance</p>
     <div class="w3-white">
       <div class="w3-dark-grey" style="height:28px;width:95%"></div>
