--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
   <!-- Header/Home -->
   <header class="w3-container w3-padding-32 w3-center w3-black" id="home">
     <h1 class="w3-jumbo"><span class="w3-hide-small">I'm</span> Benjamin Szabo.</h1>
-    <p>UPS CO-OP Application Developer</p>
+    <p>UPS Applications Developer</p>
     <img src="/Photos/facePhoto.jpg" alt="boy" class="w3-image" width="392" height="508">
   </header>
 
@@ -58,8 +58,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
   <div class="w3-content w3-justify w3-text-grey w3-padding-64" id="about">
     <h2 class="w3-text-light-grey">About Me</h2>
     <hr style="width:200px" class="w3-opacity">
-    <p>Indiana University Southeast Undergradute and Application Developer Co-op at UPS. I am constantly striving to improve my skills in the world of technology. I currently provide constant development for a middleware application that uses spring boot and fuse that resolves communication differences between many other applications, requiring a wide understanding of business logic. Previously involved in the development of automated tests using Selenium WebDriver written in java. Jenkins used to run these scheduled tests on remote machines. Heavy API integration testing with Citrus and Spring Boot using WebLogic and ActiveMQ configurations.
-    </p>
+    <p>Indiana University Southeast Undergradute and Applications Developer at UPS. I currently provide constant development for a middleware application that uses Spring Boot and Apache Karaf, requiring a wide understanding of business and technical logic. Previously involved in the development of automated tests using Selenium WebDriver along with Jenkins pipelines as well as Citrus automated tests for APIs and message translations, configured to connect to Weblogic and ActiveMQ message brokers. 
     <h3 class="w3-padding-16 w3-text-light-grey">My Skills</h3>
       <p class="w3-wide">Application Development</p>
     <div class="w3-white">
@@ -84,15 +83,15 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
         Partners
       </div>
       <div class="w3-quarter w3-section">
-        <span class="w3-xlarge">50+</span><br>
+        <span class="w3-xlarge">100+</span><br>
         Projects Done
       </div>
       <div class="w3-quarter w3-section">
-        <span class="w3-xlarge">100+</span><br>
+        <span class="w3-xlarge">150+</span><br>
         Happy Coworkers
       </div>
       <div class="w3-quarter w3-section">
-        <span class="w3-xlarge">150+</span><br>
+        <span class="w3-xlarge">1000+</span><br>
         Meetings
       </div>
     </div>
