--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
   <div class="w3-content w3-justify w3-text-grey w3-padding-64" id="about">
     <h2 class="w3-text-light-grey">About Me</h2>
     <hr style="width:200px" class="w3-opacity">
-    <p>Indiana University Southeast Undergradute and Applications Developer at UPS. I currently provide constant development for a middleware application that uses Spring Boot and Apache Karaf, requiring a wide understanding of business and technical knowledge. Previously involved in the development of automated tests using Selenium WebDriver along with Jenkins pipelines as well as Citrus automated tests for APIs and message translations, configured to connect to Weblogic and ActiveMQ message brokers. 
+    <p>Senior Applications Developer at UPS, with a Bachelors of Computer Science from Indiana University Southeast. I currently attend University of Louisville JB Speed School of Engineering for a Masters in Computer Science expected Spring of 2023. 
     <h3 class="w3-padding-16 w3-text-light-grey">My Skills</h3>
       <p class="w3-wide">Application Development</p>
     <div class="w3-white">
