--- a/index.html
+++ b/index.html
@@ -62,21 +62,16 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     <h3 class="w3-padding-16 w3-text-light-grey">My Skills</h3>
       <p class="w3-wide">Application Development</p>
     <div class="w3-white">
-      <div class="w3-dark-grey" style="height:28px;width:90%"></div>
+      <div class="w3-dark-grey" style="height:28px;width:100%"></div>
     </div>
-    <p class="w3-wide">Software Quality Assurance</p>
+    <p class="w3-wide">Software Development</p>
     <div class="w3-white">
-      <div class="w3-dark-grey" style="height:28px;width:95%"></div>
+      <div class="w3-dark-grey" style="height:28px;width:100%"></div>
     </div>
-    <p class="w3-wide">java</p>
+   <p class="w3-wide">Software Quality Assurance</p>
     <div class="w3-white">
-      <div class="w3-dark-grey" style="height:28px;width:90%"></div>
+      <div class="w3-dark-grey" style="height:28px;width:100%"></div>
     </div>
-    <p class="w3-wide">C++</p>
-    <div class="w3-white">
-      <div class="w3-dark-grey" style="height:28px;width:75%"></div>
-    </div><br>
-    
     <div class="w3-row w3-center w3-padding-16 w3-section w3-light-grey">
       <div class="w3-quarter w3-section">
         <span class="w3-xlarge">0</span><br>
@@ -108,13 +103,11 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     <hr style="width:200px" class="w3-opacity">
 
     <div class="w3-section">
-      <p><i class="fa fa-map-marker fa-fw w3-text-white w3-xxlarge w3-margin-right"></i> Louisville, KY</p>
-      <p><i class="fa fa-phone fa-fw w3-text-white w3-xxlarge w3-margin-right"></i> Phone: 502-432-3277</p>
-      <p><i class="fa fa-envelope fa-fw w3-text-white w3-xxlarge w3-margin-right"> </i> Email: bcszabo@iu.edu</p>
+      <p><i class="fa fa-envelope fa-fw w3-text-white w3-xxlarge w3-margin-right"> </i> Email: benjamin.c.szabo@gmail.com</p>
     </div><br>
     <p>Let's get in touch. Send me a message:</p>
 
-    <form action="mailto:bcszabo@iu.edu" target="_blank">
+    <form action="mailto:benjamin.c.szabo@gmail.com" target="_blank">
       <p><input class="w3-input w3-padding-16" type="text" placeholder="Name" required name="Name"></p>
       <p><input class="w3-input w3-padding-16" type="text" placeholder="Email" required name="Email"></p>
       <p><input class="w3-input w3-padding-16" type="text" placeholder="Subject" required name="Subject"></p>
